--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 html {
-  /*background: url('./assets/background.png') no-repeat center center fixed;*/
-  background: url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/background.png?raw=true') no-repeat center center fixed;
+  background: url('./assets/Kirin Village.png') no-repeat center center fixed;
+  /*background: url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/background.png?raw=true') no-repeat center center fixed;*/
   box-sizing: border-box;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -64,8 +64,8 @@ h2 {
 }
 
 .mole {
-  /*background:url('./assets/mole.png') bottom center no-repeat;*/
-  background:url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/mole.png?raw=true') bottom center no-repeat;
+  background:url('./assets/Nirik.png') bottom center no-repeat;
+  /*background:url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/mole.png?raw=true') bottom center no-repeat;*/
   background-size: 40%;
   position: absolute;
   top: 100%;
@@ -75,6 +75,20 @@ h2 {
   transition: all 1s;
   pointer-events:auto;
 }
+
+.mole.hit {
+  background: url('./assets/Autumn Blaze.png') bottom center no-repeat;
+  background-size: 40%;
+  position: absolute;
+  top: 100%;
+  width: 100%;
+  height: 100%;
+  /*transition: transform 0.5s;*/
+  transition: all 1s;
+  pointer-events:auto;
+  
+}
+
 
 .hole.show .mole {
   top: 0;
