--- a/src/styles.css
+++ b/src/styles.css
@@ -94,3 +94,14 @@ h2 {
   top: 0;
   /*transform: scale(1.1);*/
 }
+
+.splash {
+  animation: splashAnim 0.4s;
+}
+
+@keyframes splashAnim {
+  0% { transform: scale(1); }
+  50% { transform: scale(1.2); }
+  100% { transform: scale(1); }
+}
+
