--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 html {
-  background: url('./assets/Kirin Village.png') no-repeat center center fixed;
+  background: url("./assets/Kirin Village.png") no-repeat center center fixed;
   /*background: url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/background.png?raw=true') no-repeat center center fixed;*/
   box-sizing: border-box;
   -webkit-background-size: cover;
@@ -64,7 +64,7 @@ h2 {
 }
 
 .mole {
-  background:url('./assets/Nirik.png') bottom center no-repeat;
+  background:url("./assets/Nirik.png") bottom center no-repeat;
   /*background:url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/mole.png?raw=true') bottom center no-repeat;*/
   background-size: 40%;
   position: absolute;
@@ -77,15 +77,9 @@ h2 {
 }
 
 .mole.hit {
-  background: url('./assets/Autumn Blaze.png') bottom center no-repeat;
+  background: url("./assets/Autumn Blaze.png") bottom center no-repeat;
   background-size: 40%;
-  position: absolute;
-  top: 100%;
-  width: 100%;
-  height: 100%;
-  /*transition: transform 0.5s;*/
-  transition: all 1s;
-  pointer-events:auto;
+
   
 }
 
