--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 html {
-  background: url("./assets/Kirin Village.png") no-repeat center center fixed;
+  background: url("./assets/kirin-village.png") no-repeat center center fixed;
   /*background: url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/background.png?raw=true') no-repeat center center fixed;*/
   box-sizing: border-box;
   -webkit-background-size: cover;
@@ -64,7 +64,7 @@ h2 {
 }
 
 .mole {
-  background:url("./assets/Nirik.png") bottom center no-repeat;
+  background:url("./assets/nirik.png") bottom center no-repeat;
   /*background:url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/mole.png?raw=true') bottom center no-repeat;*/
   background-size: 40%;
   position: absolute;
@@ -77,7 +77,7 @@ h2 {
 }
 
 .mole.hit {
-  background: url("./assets/Autumn Blaze.png") bottom center no-repeat;
+  background: url("./assets/autumn-blaze.png") bottom center no-repeat;
   background-size: 40%;
 
   
