--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-html {
+body {
   background: url("./assets/kirin-village.png") no-repeat center center fixed;
   /*background: url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/background.png?raw=true') no-repeat center center fixed;*/
   box-sizing: border-box;
