--- a/src/styles.css
+++ b/src/styles.css
@@ -64,7 +64,7 @@ h2 {
 }
 
 .mole {
-  background:url("./assets/nirik.png") bottom center no-repeat;
+  background:url("../assets/nirik.png") bottom center no-repeat;
   /*background:url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/mole.png?raw=true') bottom center no-repeat;*/
   background-size: 40%;
   position: absolute;
@@ -77,7 +77,7 @@ h2 {
 }
 
 .mole.hit {
-  background: url("./assets/autumn-blaze.png") bottom center no-repeat;
+  background: url("../assets/autumn-blaze.png") bottom center no-repeat;
   background-size: 40%;
 
   
